# LatticeLabTermux

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README.ru.md  main.cpp
.github/workflows/: android-release.yml  build.yml  release.yml
App/: AppActions.cpp  AppActions.h  AppPaths.h  AppSignals.h  AppStateIO.cpp  AppStateIO.h  Application.cpp  CreateWindow.h  Scenes.cpp  Scenes.h  Signals.h  StbImage.cpp  StbImage.h  UserSettings.cpp  UserSettings.h  WindowController.cpp  WindowController.h
App/AppIOSystem/: AppStateIO.cpp  MoleculeTemplatesIO.cpp  MoleculeTemplatesIO.h  UserSettings.cpp  UserSettings.h
App/capture/: BufferPool.cpp  CaptureActions.h  CaptureController.cpp  CaptureController.h  CaptureOutputPath.cpp  CaptureOutputPath.h  FfmpegStreamer.cpp  FrameProducer.cpp  FrameProducer.h  FrameRecorder.cpp  FrameRecorder.h
App/debug/: CreateDebugPanels.cpp  DebugRuntime.h  ProfilerTreeView.cpp  UpdateDebugData.cpp  UpdateDebugData.h
App/interaction/: ToolsManager.cpp  ToolsManager.h
App/language_strings/: GlobalStrings.cpp  GlobalStrings.h  LanguageStringParser.cpp
App/localization/: i18n.h
App/rendering/: RenderMathAdapters.h  SimulationRenderDataAdapter.h  SimulationRenderer.cpp  SimulationRenderer.h  SimulationSceneSource.h
App/save_system/: AppSaveState.h  AppStateIO.cpp  AppStateIO.h
App/tests/: CMakeLists.txt  TestMain.cpp
App/viewport/: SceneViewport.cpp  SceneViewport.h  SimulationSceneSource.h
Benchmarks/: BenchmarkCase.h  BenchmarkScenes.cpp  BenchmarkScenes.h
Benchmarks/fixtures/: RendererFixture.h  SimulationFixture.h
Benchmarks/physics/: BM_ComputeForces.cpp  BM_NeighborListRebuild.cpp  BM_PostProcessVelocities.cpp  BM_SpatialGridRebuild.cpp
Benchmarks/rendering/: BM_DrawShot2D.cpp  BM_DrawShot3D.cpp  RendererFixtureBase.cpp
Docs/en/: Main.md
Docs/ru/: Main.md  README.ru.md
Engine/: Consts.h  Simulation.cpp  Simulation.h  World.cpp  World.h
Engine/NeighborSearch/: NeighborList.cpp  NeighborList.h
Lattice/: CMakeLists.txt  Log.cpp  Log.hpp  LogStyle.h
Lattice/CLI/: CliStyle.h  SystemInfo.cpp  SystemInfo.h  main.cpp
Lattice/Engine/: DynamicLibrary.hpp  DynamicSoA.h  ModuleRegistry.hpp  PluginHost.hpp  Simulation.cpp  Simulation.h  World.cpp  World.h  pluginLoader.hpp
Lattice/Engine/NeighborSearch/: NeighborList.cpp  NeighborList.h  SpatialGrid.cpp  SpatialGrid.h
Lattice/Engine/NeighborSearch/BarnesHut/: Octree.cpp  Octree.h
Lattice/Engine/NeighborSearch/tests/bench/: BM_NeighborNeedListRebuild.cpp  BM_Octree.cpp
Lattice/Engine/NeighborSearch/tests/unit/: NeighborSearchTests.cpp
Lattice/Engine/io/: SimulationStateIO.cpp  xyzStream.cpp
Lattice/Engine/io/tests/unit/: IOTests.cpp
Lattice/Engine/metrics/: EnergyMetrics.h
Lattice/Engine/physics/: AtomStorage.h  Bond.cpp  BondOps.cpp  BondTable.h  ForceField.cpp  ForceField.h  IForceField.h  IIntegrator.h  IThermostat.h  Integrator.cpp  Integrator.h  VectorField.cpp  VectorField.h
Lattice/Engine/physics/Atom/: AtomSort.cpp  AtomStorage.h
Lattice/Engine/physics/ForceFields/: BondForceField.cpp  BondForceField.h  CoulombForceField.cpp  CoulombForceField.h  LJForceField.h  WallForceField.cpp
Lattice/Engine/physics/integrators/: AndersenIntegrator.cpp  AndersenIntegrator.h  StepOps.h
Lattice/Engine/physics/tests/bench/: BM_AtomStorage.cpp
Lattice/Engine/physics/tests/unit/: PhysicsTests.cpp
Lattice/Generators/: Gas.cpp  Gas.h  HexLattice.cpp  HexLattice.h  HexTriangleBipyramid.cpp  HexTriangleBipyramid.h  LatticeFill.cpp  LatticeFill.hpp  Massive.cpp  Massive.h  RandomFill.cpp  RandomFill.hpp
Lattice/Plugins/ClassicMD/: CMakeLists.txt  ClassicMDPlugin.cpp  ClassicMDPlugin.h  PluginInit.cpp  PluginInit.h
Lattice/Plugins/ClassicMD/ForceFields/: BondForceField.cpp  ClassicMDForceField.cpp  CoulombForceField.cpp  CoulombForceField.h  LJForceField.h  WallForceField.cpp  WallForceField.h
Lattice/Plugins/ClassicMD/Integrators/: KDK.cpp  KDK.h  RK4.cpp  RK4.h  StepOps.h  Verlet.cpp  Verlet.h
Lattice/Plugins/ClassicMD/Thermostats/: AccelDamp.cpp  AccelDamp.hpp  Andersen.cpp  Barendsen.cpp  Barendsen.hpp  Langevin.cpp  Langevin.h
Lattice/Plugins/ClassicMD/tests/bench/: BM_PostProcessVelocities.cpp
Lattice/Scripting/: LuaState.cpp  ScriptAPI.cpp  ScriptAPI.hpp
Lattice/benchmarks/: BenchmarkScenes.cpp  BenchmarkScenes.h  CMakeLists.txt  Fixture.h  bench_main.cpp
Lattice/benchmarks/BmRunner/: BenchmarkMain.cpp  Data.cpp  Output.cpp  Output.h  Runner.cpp  Support.cpp  Support.h  Types.h
Lattice/benchmarks/physics/: BM_AtomsSort.cpp  BM_NeighborListRebuild.cpp  BM_Octree.cpp  BM_SimulationStep.cpp  BM_SpatialGridRebuild.cpp
Lattice/tests/: CMakeLists.txt  TestMain.cpp  TestSupport.h  test.cpp
Rendering/: BaseRenderer.cpp  BaseRenderer.h  BgfxCallback.h  BgfxContext.h  CMakeLists.txt  Render.h  RenderAtoms.cpp  RenderBuffers.cpp  RenderData.h  RenderFrame.cpp  RenderLines.cpp  RenderPipelines.cpp  Renderer.cpp  Renderer.h  Renderer2D.h  Renderer3D.h  RendererBGFX.cpp  RendererBGFX.h  RendererCapture.cpp  RendererCapture.h  RendererWGPU.cpp  RendererWGPU.h  WGPUContext.h  WGPUScreenShot.h  WorldRenderDataAdapter.h
Rendering/2d/: Renderer2D.cpp  Renderer2DBGFX.cpp  Renderer2DBGFX.h  Renderer2DWGPU.cpp  Renderer2DWGPU.h
Rendering/3d/: Renderer3D.cpp  Renderer3DBGFX.cpp  Renderer3DBGFX.h  Renderer3DWGPU.cpp  Renderer3DWGPU.h
Rendering/api/: RendererFactory.h
Rendering/benchmarks/: BM_RenderAtoms.cpp  BM_RenderBHtree.cpp  BM_RenderField.cpp  BM_RenderGrid.cpp  CMakeLists.txt
Rendering/camera/: Camera.cpp  Camera.h
Rendering/layers/: Atoms.cpp  Bond.cpp  Box.cpp  Field.cpp  Grid.cpp  LayerState.h  MemLine.cpp  arrow.cpp
Rendering/pipelines/: AtomPipeline.cpp  FieldPipelines.cpp  GridPipeline.cpp  LinePipeline.cpp  PipelineHelpers.h  PipelineState.h
Rendering/shaders/: atom2d.wgsl  atom3d.wgsl  contour.wgsl  field_arrows.wgsl  grid.wgsl  line.wgsl  memline.wgsl
Rendering/tests/: CMakeLists.txt  CameraTests.cpp
assets/: translate.csv
cmake/: bin2c.cmake  dependencies.cmake  embedded_resources.cmake  shaders.cmake
(+125 files in other folders)
